--- a/MAGA_NumericalMethods_MonteCarlo/MAGA_NumericalMethods_MonteCarlo.vcxproj
+++ b/MAGA_NumericalMethods_MonteCarlo/MAGA_NumericalMethods_MonteCarlo.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="MAGA_NumericalMethods_MonteCarlo.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="Model2D.h" />
     <ClInclude Include="ModelDrawer.h" />
     <ClInclude Include="MultiExp.h" />
     <ClInclude Include="MyDlg.h" />
@@ -201,6 +202,7 @@
     <ClCompile Include="EsrDlg.cpp" />
     <ClCompile Include="MAGA_NumericalMethods_MonteCarlo.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="Model2D.cpp" />
     <ClCompile Include="ModelDrawer.cpp" />
     <ClCompile Include="MultiExp.cpp" />
     <ClCompile Include="MyDlg.cpp" />
