--- a/MAGA_NumericalMethods_MonteCarlo/MAGA_NumericalMethods_MonteCarlo.vcxproj.filters
+++ b/MAGA_NumericalMethods_MonteCarlo/MAGA_NumericalMethods_MonteCarlo.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Drawer.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Model2D.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MAGA_NumericalMethods_MonteCarlo.cpp">
@@ -78,6 +81,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="Drawer.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Model2D.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
